<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameViewModel"
            type="com.example.guessit.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/theWordIs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_word_is"
            app:layout_constraintBottom_toTopOf="@+id/word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{@string/wordFormat(gameViewModel.word)}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/correct_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theWordIs_text"
            tools:text="Dhanuesh" />

        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> gameViewModel.onSkip()}"
            android:text="@string/skip"
            app:layout_constraintBaseline_toBaselineOf="@+id/correct_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/correct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> gameViewModel.onSuccess()}"
            android:text="@string/correct"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{gameViewModel.currentTimeString}"
            app:layout_constraintBottom_toTopOf="@+id/userScore_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/word"
            app:layout_constraintVertical_bias="0.92"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="00:00" />

        <TextView
            android:id="@+id/userScore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/scoreFormat(gameViewModel.score)}"
            app:layout_constraintBottom_toTopOf="@+id/correct_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_text"
            tools:text="20" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
